# author-kit

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.authorkit/instructions/: claude.md.tmpl  codex.md.tmpl  copilot.md.tmpl
.authorkit/memory/: constitution.md
.authorkit/prompts/: authorkit.amend.md  authorkit.analyze.md  authorkit.chapter.draft.md  authorkit.chapter.help.md  authorkit.chapter.md  authorkit.chapter.plan.md  authorkit.chapter.reorder.md  authorkit.chapter.review.md  authorkit.chapters.md  authorkit.checklist.md  authorkit.clarify.md  authorkit.conceive.md  authorkit.constitution.md  authorkit.discuss.md  authorkit.outline.md  authorkit.park.md  authorkit.pivot.md  authorkit.reconcile.md  authorkit.research.md  authorkit.retcon.md  authorkit.revise.md  authorkit.snapshot.md  authorkit.whatif.md  authorkit.world.build.md  authorkit.world.index.md  authorkit.world.sync.md  authorkit.world.update.md  authorkit.world.verify.md
.authorkit/templates/: agent-file-template.md  amendment-template.md  chapter-plan-template.md  chapters-template.md  checklist-template.md  concept-template.md  discuss-notes-template.md  outline-template.md  parked-decisions-template.md  research-index-template.md  research-topic-template.md  snapshot-template.md  style-anchor-template.md  world-entity-frontmatter.md
.claude/: settings.local.json
.claude/commands/: authorkit.analyze.md  authorkit.chapter.draft.md  authorkit.chapter.md  authorkit.chapter.plan.md  authorkit.chapters.md  (+18 more)
.github/: CODEOWNERS  copilot-instructions.md
(+49 files in other folders)
